@@ -381,9 +381,12 @@
       \item When operating in a multibyte locale, \code{grep()}
       and related functions did not handle UTF-8 strings properly.
       (\PR{16264})
-      
+
       \item \code{read.dcf()} misread lines longer than 8191 characters.
       (Reported by Hervé Pagès with a patch.)
+
+      \item \code{within(df, ..)} no longer drops columns whose name
+      start with a \code{"."}.
     }
   }
 }
